--- a/app/src/main/res/layout/activity_comments.xml
+++ b/app/src/main/res/layout/activity_comments.xml
@@ -53,12 +53,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <ImageView
+        <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/picture"
             android:layout_width="55dp"
             android:layout_height="55dp"
             android:src="@drawable/logo"
-            android:layout_marginLeft="15dp"></ImageView>
+            android:layout_marginLeft="15dp"></de.hdodenhof.circleimageview.CircleImageView>
 
         <TextView
             android:layout_width="wrap_content"
@@ -98,12 +98,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <ImageView
+        <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/pic"
             android:layout_width="55dp"
             android:layout_height="55dp"
             android:src="@drawable/logo"
-            android:layout_marginLeft="15dp"></ImageView>
+            android:layout_marginLeft="15dp"></de.hdodenhof.circleimageview.CircleImageView>
 
         <TextView
             android:layout_width="wrap_content"
