--- a/app/src/main/res/layout/activity_new_post.xml
+++ b/app/src/main/res/layout/activity_new_post.xml
@@ -2,10 +2,10 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="300dp"
-    android:layout_height="500dp"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:layout_gravity="center"
-    android:background="#c2bdbf"
+
     tools:context=".new_post">
 
     <ScrollView
@@ -24,15 +24,17 @@
         android:id="@+id/myimage"
         android:layout_width="270dp"
         android:layout_height="180dp"
-        android:layout_margin="15dp">
+
+        >
 
     </ImageView>
 
     <Button
         android:id="@+id/add"
         android:layout_width="match_parent"
-        android:layout_height="40dp"
+        android:layout_height="30dp"
         android:text="add picture"
+        android:background="@drawable/rounded"
         >
 
     </Button>
@@ -138,10 +140,11 @@
             android:layout_width="100dp"
             android:layout_height="25dp"
             android:layout_marginTop="40dp"
-            android:background="@color/white"
+            android:background="@drawable/rounded"
             android:text="SAVE"
             android:layout_marginBottom="10dp"
-            android:layout_gravity="center">
+            android:layout_gravity="center"
+            >
 
         </Button>
 
